k8s/enketo-redis-main.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enketo-redis-main
  labels:
    app: enketo-redis-main
spec:
  selector:
    matchLabels:
      app: enketo-redis-main
  replicas: 1
  template:
    metadata:
      labels:
        app: enketo-redis-main
    spec:
      containers:
      - name: master
        image: redis:5
        ports:
        - containerPort: 6379
        command:
        - redis-server
        - /usr/local/etc/redis/redis.conf
        volumeMounts:
        - name: redisconfig
          mountPath: /usr/local/etc/redis
      volumes:
        - name: redisconfig
          configMap:
            name: redis-enketo-main
            items:
            - key: redis.conf
              path: redis.conf
---
apiVersion: v1
kind: Service
metadata:
  name: enketo-redis-main
  labels:
    app: enketo-redis-main
spec:
  selector:
   app: enketo-redis-main
  ports:
  - port: 6379
