k8s/mail.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail
spec:
  selector:
    matchLabels:
      app: mail
  replicas: 1
  template:
    metadata:
      labels:
        app: mail
    spec:
      containers:
        - name: mail
          image: itsissa/namshi-smtp:4.89-2.deb9u5
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 25
---
apiVersion: v1
kind: Service
metadata:
  name: mail
  labels:
    app: mail
spec:
  selector:
   app: mail
  ports:
   - port: 25
