k8s/pyxform.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyxform
spec:
  selector:
    matchLabels:
      app: pyxform
  replicas: 1
  template:
    metadata:
      labels:
        app: pyxform
    spec:
      containers:
        - name: pyxform
          image: getodk/pyxform-http:v1.0.0 
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pyxform
  labels:
    app: pyxform
spec:
  selector:
   app: pyxform
  ports:
   - port: 80
