k8s/service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service
spec:
  selector:
    matchLabels:
      app: service
  replicas: 1
  template:
    metadata:
      labels:
        app: service
    spec:
      containers:
        - name: service
          image: ${DOCKER_REGISTRY}/service:${IMAGE_VERSION}
          ports:
            - containerPort: 8383
            # TODO: 443
          command: ["sh", "./start-odk.sh"]
          volumeMounts:
          - name: enketo-secrets
            mountPath: "/etc/secrets"
            readOnly: true
          - name: db-secrets
            mountPath: "/etc/db-secrets"
            readOnly: true
          - name: odk-config
            mountPath: "/usr/share/odk/config.json.template"
            subPath: service-config.json
          - name: odk-config
            mountPath: "/usr/odk/start-odk.sh"
            subPath: start-odk.sh
      volumes:
        - name: init-db
          configMap:
            name: odk-init-db
            defaultMode: 0755
        - name: odk-config
          configMap:
            name: odk-config
        - name: enketo-secrets
          secret:
            secretName: enketo
        - name: db-secrets
          secret:
            secretName: postgres-odk
---
apiVersion: v1
kind: Service
metadata:
  name: service
  labels:
    app: service
spec:
  selector:
   app: service
  ports:
   - port: 8383
