k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:9.6
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  ports:
   - port: 5432
  selector:
   app: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail
spec:
  selector:
    matchLabels:
      app: mail
  replicas: 1
  template:
    metadata:
      labels:
        app: mail
    spec:
      containers:
        - name: mail
          image: itsissa/namshi-smtp:4.89-2.deb9u5
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 25
---
apiVersion: v1
kind: Service
metadata:
  name: mail
  labels:
    app: mail
spec:
  selector:
   app: mail
  ports:
   - port: 25
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service
spec:
  selector:
    matchLabels:
      app: service
  replicas: 1
  template:
    metadata:
      labels:
        app: service
    spec:
      containers:
        - name: service
          image: ${DOCKER_REGISTRY}/service:${IMAGE_VERSION} # TODO Change to public repo
          ports:
            - containerPort: 8383
            # TODO: 443
          command: ["sh", "./start-odk.sh"]
          volumeMounts:
          - name: enketo-secrets
            mountPath: "/etc/secrets"
            readOnly: true
          - name: db-secrets
            mountPath: "/etc/db-secrets"
            readOnly: true
          - name: odk-config
            mountPath: "/usr/share/odk/config.json.template"
            subPath: service-config.json
          - name: odk-config
            mountPath: "/usr/odk/start-odk.sh"
            subPath: start-odk.sh
      volumes:
        - name: init-db
          configMap:
            name: odk-init-db
            defaultMode: 0755
        - name: odk-config
          configMap:
            name: odk-config
        - name: enketo-secrets
          secret:
            secretName: enketo
        - name: db-secrets
          secret:
            secretName: postgres-odk
---
apiVersion: v1
kind: Service
metadata:
  name: service
  labels:
    app: service
spec:
  selector:
   app: service
  ports:
   - port: 8383
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyxform
spec:
  selector:
    matchLabels:
      app: pyxform
  replicas: 1
  template:
    metadata:
      labels:
        app: pyxform
    spec:
      containers:
        - name: pyxform
          image: getodk/pyxform-http:v1.0.0 
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pyxform
  labels:
    app: pyxform
spec:
  selector:
   app: pyxform
  ports:
   - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enketo
spec:
  selector:
    matchLabels:
      app: enketo
  replicas: 1
  template:
    metadata:
      labels:
        app: enketo
    spec:
      containers:
        - name: enketo
          image: ${DOCKER_REGISTRY}/enketo:${IMAGE_VERSION} # TODO Change to public repo
          ports:
            - containerPort: 8005
            # TODO: 443
          volumeMounts:
          - name: odk-config
            mountPath: "/srv/src/enketo_express/config/config.json.template"
            subPath: enketo-config.json
      volumes:
        - name: odk-config
          configMap:
            name: odk-config
---
apiVersion: v1
kind: Service
metadata:
  name: enketo
  labels:
    app: enketo
spec:
  selector:
   app: enketo
  ports:
   - port: 8005
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enketo-redis-main
  labels:
    app: enketo-redis-main
spec:
  selector:
    matchLabels:
      app: enketo-redis-main
  replicas: 1
  template:
    metadata:
      labels:
        app: enketo-redis-main
    spec:
      containers:
      - name: master
        image: redis:5
        ports:
        - containerPort: 6379
        command:
        - redis-server
        - /usr/local/etc/redis/redis.conf
        volumeMounts:
        - name: redisconfig
          mountPath: /usr/local/etc/redis
      volumes:
        - name: redisconfig
          configMap:
            name: redis-enketo-main
            items:
            - key: redis.conf
              path: redis.conf
---
apiVersion: v1
kind: Service
metadata:
  name: enketo-redis-main
  labels:
    app: enketo-redis-main
spec:
  selector:
   app: enketo-redis-main
  ports:
  - port: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enketo-redis-cache
  labels:
    app: enketo-redis-cache
spec:
  selector:
    matchLabels:
      app: enketo-redis-cache
  replicas: 1
  template:
    metadata:
      labels:
        app: enketo-redis-cache
    spec:
      containers:
      - name: master
        image: redis:5
        ports:
        - containerPort: 6380
        command:
        - redis-server
        - /usr/local/etc/redis/redis.conf
        volumeMounts:
        - name: redisconfig
          mountPath: /usr/local/etc/redis
      volumes:
        - name: redisconfig
          configMap:
            name: redis-enketo-cache
            items:
            - key: redis.conf
              path: redis.conf
---
apiVersion: v1
kind: Service
metadata:
  name: enketo-redis-cache
  labels:
    app: enketo-redis-cache
spec:
  ports:
  - port: 6380
  selector:
   app: enketo-redis-cache
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odk-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: enketo
            port:
              number: 8005 #8383
