k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odk-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  defaultBackend:
    service:
      name: frontend
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /-
        pathType: Prefix
        backend:
          service:
            name: enketo
            port:
              number: 8005
      - path: /v
        pathType: Prefix
        backend:
          service:
            name: service
            port:
              number: 8383
